--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS5.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS5.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juegos</title>
+    <title>Juegos PS5</title>
 </head>
 <body>
 
-    <h1>Aca se ven los juegos</h1>
+    <h1>Aca se ven los juegos de PS5</h1>
 
     {% for x in juegos %}
         <p>{{x.nombre}}</p>
