cambios finales para la tercera-pre-entrega

--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS4Formulario.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS4Formulario.html
@@ -19,6 +19,8 @@
 
     </form> -->
 
+    <h1>Ingresa los datos para agregar un nuevo juego de PS4</h1>
+
     {% if miFormulario.errors %}
 
     <p style="color: red;"> Estan mal los datos, revisar</p>
