--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/verEstudios.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/verEstudios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juegos PS5</title>
+    <title>Estudios de desarrollo</title>
 </head>
 
 <body>
@@ -15,16 +15,17 @@
 
     <section class="contenedorCambiante">
 
-        <h1>Aca se ven los juegos de PS5</h1>
+        <h1>Aca se ven los estudios de desarrollo de videojuegos</h1>
 
-        {% for x in juegos %}
+        {% for x in estudios %}
         <p>{{x.nombre}}</p>
-        <p>{{x.genero}}</p>
-        <p>{{x.anio}}</p>
+        <p>{{x.lanzamientosFamosos}}</p>
         <br>
         {% endfor %}
+
     </section>
     {%endblock%}
+
 
 </body>
 
