crud de juegos ps4, editar perfil y avatar,manejo de usuarios

--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/busquedaJuegosPS4.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/busquedaJuegosPS4.html
@@ -9,7 +9,7 @@
 
     <h1>Busca el juego de PS4 por su titulo</h1>
 
-    <form action="/AppJuegos/buscarPS4" method="GET">
+    <form action="/buscarPS4" method="GET">
 
         <input type="text" name="nombre" id="nombre">
 
