--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/inicio.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/inicio.html
@@ -1,5 +1,10 @@
 {%extends "AppJuegos/padre.html"%}
 {%load static%}
+
+{% block titulo %}
+Bienvenidos
+{%endblock%}
+
 {%block contenidoQueCambia %}
        
 {%endblock%}
