--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS4Formulario.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS4Formulario.html
@@ -6,37 +6,40 @@
     <title>Formulario - Agregar Juego PS4</title>
 </head>
 <body>
-<!-- formulario con html
-    <form action="/AppJuegos/juegosPS4Formulario" method="POST">{% csrf_token %}
 
-        <p>Nombre del juego: <input type="text" name="nombre">  </p>
+    {%extends "AppJuegos/padre.html"%}
+    {%load static%}
 
-        <p>Genero: <input type="text" name="genero">  </p>
+    {% block titulo %}
+    Agrega un juego de PS4
+    {%endblock%}
 
-        <p>Año de lanzamiento: <input type="number" name="anio">  </p>
+    {%block contenidoQueCambia %}
 
-        <input type="submit" value="enviar">
+    <section class="contenedorCambiante">
 
-    </form> -->
+        <h1>Ingresa los datos para agregar un nuevo juego de PS4</h1>
 
-    <h1>Ingresa los datos para agregar un nuevo juego de PS4</h1>
-
-    {% if miFormulario.errors %}
-
-    <p style="color: red;"> Estan mal los datos, revisar</p>
-
-    {% endif %}
-
-    <form action="" method="POST">
-        {% csrf_token %}
-
-        <table>
-
-            {{miFormulario.as_table}}
-        </table>
-
-        <input type="submit", value="enviar">
-    </form>
+        {% if form.errors %}
     
+        <p style="color: red;"> Estan mal los datos, revisar</p>
+    
+        {% endif %}
+    
+        <form action="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+    
+            <table>
+    
+                {{form.as_table}}
+            </table>
+    
+            <input type="submit", value="enviar">
+        </form>
+
+    </section>
+         
+    {%endblock%}
+
 </body>
 </html>
