--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/resultadosBusquedaJuegosPS4.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/resultadosBusquedaJuegosPS4.html
@@ -15,7 +15,10 @@
     {% for juego in juegos%}
         <li> {{juego.nombre}}</li>
         <li> {{juego.genero}}</li>
-        <li> {{juego.anio}}</li>
+        <li> {{juego.año}}</li>
+        <li> {{juego.descripcion}}</li>
+        <li> {{juego.imagen}}</li>
+        <li> {{juego.fecha}}</li>
     {% endfor %}
     </ul>
 
