--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/padre.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/padre.html
@@ -1,125 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        {% load static %}
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Landing Page - Start Bootstrap Theme</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static '/AppJuegos/css/styles.css' %}" rel="stylesheet" />
-    </head>
-    <body>
-        <!-- Navigation-->
-        <nav class="navbar navbar-light bg-light static-top">
-            <div class="container">
-                <a class="navbar-brand" href="{% url 'Inicio' %}">Inicios</a>
-                <a class="navbar-brand" href="{% url 'verJuegosPS4' %}">Juegos PS4</a>
-                <a class="navbar-brand" href="{% url 'verJuegosPS5' %}">Juegos PS5</a>
-                <a class="navbar-brand" href="{% url 'verEstudios' %}">Estudios</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
-            </div>
-        </nav>
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container position-relative">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6">
-                        <div class="text-center text-white">
-                            <!-- Page heading-->
-                            <h1 class="mb-5">Bienvenido a mi pagina Web</h1>
-                            <!-- Signup form-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- * * SB Forms Contact Form * *-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- This form is pre-integrated with SB Forms.-->
-                            <!-- To make this form functional, sign up at-->
-                            <!-- https://startbootstrap.com/solution/contact-forms-->
-                            <!-- to get an API token!-->
-                            <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
-                                <!-- Email address input-->
-                                <div class="row">
-                                    <div class="col">
-                                        <input class="form-control form-control-lg" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
-                                        <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:required">Email Address is required.</div>
-                                        <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
-                                    </div>
-                                    <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
-                                </div>
-                                <!-- Submit success message-->
-                                <!---->
-                                <!-- This is what your users will see when the form-->
-                                <!-- has successfully submitted-->
-                                <div class="d-none" id="submitSuccessMessage">
-                                    <div class="text-center mb-3">
-                                        <div class="fw-bolder">Form submission successful!</div>
-                                        <p>To activate this form, sign up at</p>
-                                        <a class="text-white" href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                    </div>
-                                </div>
-                                <!-- Submit error message-->
-                                <!---->
-                                <!-- This is what your users will see when there is-->
-                                <!-- an error submitting the form-->
-                                <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
 
-        {% block contenidoQueCambia %}
+<head>
+    {% load static %}
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title></title>
+    <link href="{% static '/AppJuegos/css/estilos.css' %}" rel="stylesheet" />
+</head>
 
-            {%endblock%}
-    
-        <!-- Footer-->
-        <footer class="footer bg-light">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                        <ul class="list-inline mb-2">
-                            <li class="list-inline-item"><a href="#!">About</a></li>
-                            <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Contact</a></li>
-                            <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Terms of Use</a></li>
-                            <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Privacy Policy</a></li>
-                        </ul>
-                        <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2023. All Rights Reserved.</p>
-                    </div>
-                    <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+<body>
+    <nav class="menuPrincipal">
+        <div class="contendorMenu">
+            <a href="{% url 'Inicio' %}">Inicio</a>
+            <a href="{% url 'verJuegosPS4' %}">Juegos PS4</a>
+            <a href="{% url 'verJuegosPS5' %}">Juegos PS5</a>
+            <a href="{% url 'listaDeEstudios' %}">Estudios</a>
+            <a href="{% url 'about' %}">Sobre mi</a>
+
+            {%if user.is_authenticated %}
+            <div class="perfil">
+
+                {% with first_image=user.avatarimagen_set.last %}
+                {% if first_image %}
+                    <a href="{{first_image.imagen.url}}" target="_blank"></a>
+                    <a href="{% url 'agregarAvatar' %}"><img src="{{first_image.imagen.url}}" alt="avatar" id="avatar"></a>
+
+                {% else %}
+
+                    <a href="{% url 'agregarAvatar' %}" title="agregar avatar"><img src="{% static '/AppJuegos/assets/img/sinAvatar2.png' %}" alt="sin avatar" id="sinAvatar"></a>
+                
+               
+                {% endif %}
+                {% endwith %}
+
+                <p>{{user.username}}</p>
+
+                <a href="{% url 'editarPerfil' %}" title="editar perfil"><img src="{% static '/AppJuegos/assets/img/editar2.png' %}" alt="editar perfil" id="editarPerfil"></a>
+             
+
             </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
+
+            <button><a href="{% url 'logout' %}">Cerrar Sesion</a> </button>
+
+            {% else %}
+
+            <button><a href="{% url 'register' %}">Registrarse</a></button>
+            <button><a href="{% url 'login' %}">Iniciar Sesion</a></button>
+
+            {% endif %}
+
+        </div>
+    </nav>
+
+
+    <h1 class="mb-5">{% block titulo %}{%endblock%}</h1>
+    {% block agregar %}{%endblock%}
+
+
+    {% block contenidoQueCambia %}
+    {%endblock%}
+    </header>
+
+</body>
+
 </html>
