--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS4.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS4.html
@@ -11,18 +11,45 @@
 
     {%extends "AppJuegos/padre.html"%}
     {%load static%}
+
+    {% block titulo %}
+    Aca se ven los juegos de PS4
+    {%endblock%}
+
+    {% block agregar %}
+
+    <button class="btn btn-primary"> <a href="{%url 'juegosPS4Formulario'%}"> Agregar nuevo juego de PS4</a></button>
+  
+    {%endblock%}
+
+
     {%block contenidoQueCambia %}
 
     <section class="contenedorCambiante">
 
-        <h1>Aca se ven los juegos de PS4</h1>
+        <div class="contendores">
+            {% for x in juegos %}
 
-        {% for x in juegos %}
-        <p>{{x.nombre}}</p>
-        <p>{{x.genero}}</p>
-        <p>{{x.anio}}</p>
-        <br>
-        {% endfor %}
+            <div class="cards">
+                <p>{{x.nombre}}</p>
+                <p>{{x.genero}}</p>
+                <p>{{x.descripcion}}</p>
+                <p>{{x.año}}</p>
+                <img id="imgJuegos" src="{{x.imagen.url}}" alt="">
+                <p>{{x.fecha}}</p>
+
+                <button>
+                    <a href="{% url 'eliminarJuegoPS4' x.nombre %}" > Eliminar </a>
+                </button>
+
+                <button>
+                    <a href="{% url 'actualizarJuegosPS4Formulario' x.nombre %}" > Editar </a>
+                </button>
+                
+            </div>
+
+            {% endfor %}
+        </div>
     </section>
     {%endblock%}
 
