actualizando modelo PS5 y sus views, actualizando CRUD de estudios y sus html

--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/actualizarEstudio.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/actualizarEstudio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Estudio</title>
+    <title>Actualizar Estudio</title>
 </head>
 
 <body>
@@ -13,23 +13,23 @@
     {%load static%}
 
     {% block titulo %}
-    Crear Nuevo estudio
+    Actualizar {{object}}
     {%endblock%}
 
     {%block contenidoQueCambia %}
 
     <section class="contenedorCambiante">
-        <h1>Ingresa los datos para agregar un nuevo estudio</h1>
+        <h1>Ingresa los datos para actualizar un estudio</h1>
 
         <form action="" method="POST">
             {% csrf_token %}
-
+        
             {{form.as_p}}
-
-            <input type="submit" , value="enviar">
+        
+            <input type="submit" , value="Actualizar">
         </form>
-
-
+        
+  
     </section>
     {%endblock%}
 
