--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/estudiosList.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/estudiosList.html
@@ -18,7 +18,7 @@
 
     {% block agregar %}
 
-    <button class="btn btn-primary"> <a href="{%url 'estudiosFormulario'%}"> Agregar nuevo estudio</a></button>
+    <button class="btn btn-primary"> <a href="{%url 'crearEstudios'%}"> Agregar nuevo estudio</a></button>
   
     {%endblock%}
 
@@ -32,6 +32,14 @@
             <div class="cards">
                 <p>{{x.nombre}}</p>
                 <p>{{x.lanzamientosFamosos}}</p>
+
+                <button>
+                    <a href="{% url 'actualizarEstudio' x.id %}" > Actualizar </a>
+                </button>
+
+                <button>
+                    <a href="{% url 'eliminarEstudio' x.id %}" > Eliminar </a>
+                </button>
 
             </div>
 
