--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/verEstudios.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/verEstudios.html
@@ -33,6 +33,14 @@
                 <p>{{x.nombre}}</p>
                 <p>{{x.lanzamientosFamosos}}</p>
 
+                <button>
+                    <a href="{% url 'actualizarEstudio' x.id %}" > Actualizar </a>
+                </button>
+
+                <button>
+                    <a href="{% url 'eliminarEstudio' x.id %}" > Eliminar </a>
+                </button>
+
             </div>
 
             {% endfor %}
