--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS5Formulario.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/juegosPS5Formulario.html
@@ -26,7 +26,7 @@
     
         {% endif %}
     
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
     
             <table>
@@ -38,8 +38,8 @@
         </form>
 
     </section>
-        
+         
     {%endblock%}
-    
+
 </body>
 </html>
