--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS5.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS5.html
@@ -38,9 +38,16 @@
                 <img id="imgJuegos" src="{{x.imagen.url}}" alt="">
                 <p>{{x.fecha}}</p>
 
+                {% if user.is_authenticated and user.is_staff %}
                 <button>
-                    <a href="{% url 'eliminarJuegoPS5' x.nombre %}" > Eliminar </a>
+                    <a href="{% url 'eliminarJuegoPS5' x.nombre %}">Eliminar</a>
                 </button>
+                {% endif %}
+
+                <button>
+                    <a href="{% url 'leerMasPS5' x.nombre %}"> Ver </a>
+                </button>
+
 
                 <button>
                     <a href="{% url 'actualizarJuegosPS5Formulario' x.nombre %}" > Editar </a>
