--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS4.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS4.html
@@ -40,17 +40,16 @@
 
                 {% if user.is_authenticated and user.is_staff %}
                 <button>
-                    <a href="{% url 'eliminarJuegoPS4' x.nombre %}">Eliminar</a>
+                    <a href="{% url 'eliminarJuegoPS4' x.id %}">Eliminar</a>
                 </button>
                 {% endif %}
 
                 <button>
-                    <a href="{% url 'leerMasPS4' x.nombre %}"> Ver </a>
+                    <a href="{% url 'leerMasPS4' x.id %}"> Ver </a>
                 </button>
 
-
                 <button>
-                    <a href="{% url 'actualizarJuegosPS4Formulario' x.nombre %}"> Editar </a>
+                    <a href="{% url 'actualizarJuegosPS4Formulario' x.id %}"> Editar </a>
                 </button>
 
             </div>
