--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/estudiosList.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/estudiosList.html
@@ -33,15 +33,18 @@
                 <p>{{x.nombre}}</p>
                 <p>{{x.lanzamientosFamosos}}</p>
 
+                {% if user.is_authenticated %}
                 <button>
                     <a href="{% url 'actualizarEstudio' x.id %}" > Actualizar </a>
                 </button>
+                {% endif %}
 
                 {% if user.is_authenticated and user.is_staff %}
                 <button>
                     <a href="{% url 'eliminarEstudio' x.id %}">Eliminar</a>
                 </button>
                 {% endif %}
+
 
             </div>
 
