--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/leerMasPS4.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/leerMasPS4.html
@@ -4,30 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados de la busqueda de juegos de PS4 por titulo</title>
+    <title>Leer Mas PS4</title>
 </head>
 
 <body>
 
-    <p>Estamos buscando el juego: {{nombre}} de PS4</p>
+    {%extends "AppJuegos/padre.html"%}
+    {%load static%}
 
-    {% if juego %}
+    {% block titulo %}
+    Editar el juego
+    {%endblock%}
 
-    <ul>
-        
-        <li> {{juego.nombre}}</li>
-        <li> {{juego.genero}}</li>
-        <li> {{juego.año}}</li>
-        <li> {{juego.descripcion}}</li>
-        <li>
-            <img id="imgJuegos" src="{{juego.imagen.url}}" alt="">
-        </li>
-        <li> {{juego.fecha}}</li>
-        
-    </ul>
+    {%block contenidoQueCambia %}
 
-    {% endif %}
+    <section class="contenedorCambiante">
+
+        <p>Estamos buscando el juego: {{nombre}} de PS4</p>
+
+        {% if juego %}
+
+        <ul>
+
+            <li> {{juego.nombre}}</li>
+            <li> {{juego.genero}}</li>
+            <li> {{juego.año}}</li>
+            <li> {{juego.descripcion}}</li>
+            <li>
+                <img id="imgJuegos" src="{{juego.imagen.url}}" alt="">
+            </li>
+            <li> {{juego.fecha}}</li>
+
+        </ul>
+
+        {% endif %}
+
+    </section>
+
+    {%endblock%}
+
 
 </body>
 
 </html>
+
