--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS5.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS5.html
@@ -44,14 +44,16 @@
                 </button>
                 {% endif %}
 
-                <button>
-                    <a href="{% url 'leerMasPS5' x.id %}"> Ver </a>
-                </button>
-
+                {% if user.is_authenticated %}
                 <button>
                     <a href="{% url 'actualizarJuegosPS5Formulario' x.id %}" > Editar </a>
                 </button>
-                
+                {% endif %}
+
+                <button>
+                    <a href="{% url 'leerMasPS5' x.id %}"> Ver </a>
+                </button>
+    
             </div>
 
             {% endfor %}
