--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/about.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/about.html
@@ -18,7 +18,17 @@
 
     <section class="contenedorCambiante">
 
-        <h1>Ingresa los datos para agregar un nuevo estudios de desarrollo</h1>
+        <h1>Hola, bienvenidos a mi página web</h1>
+
+        <p>
+            Soy Rodrigo Vazquez, tengo 24 años y soy de Buenos Aires, Argentina. <br>
+            Estudio programacion desde hace un año y medio aproximadamente, comence justamente en Coder-House con la carrera de desarrollador full-stack y luego segui aprendiendo con otros cursos como este de Python en el cual aprendi por supuesto muchas cosas nuevas que se reflejan en la creacion de esta pagina. <br>
+            Asi que voy a explicar un poco cual es la idea de la misma. En principio elegi simplemente Juegos como forma de modelos porque me parecia sencillo y era algo que me gustaba utilizar, luego decidí mantenerlo ya que era lo que habia utilizado las clases anteriores para ir actualizando y mejorando el proyecto, como pasar de agregar por la url hasta hacerlo por formularios y tener un CRUD completo. <br>
+            La pagina funciona para que cualquier pueda ver y navegar por los menues sin necesidad de estar logueado y ver la informacion de un juego puntual, pero para poder editar y crear si debe registarse. El administrador es el unico que puede hacer todo esto y ademas eliminar cualquier juego. 
+            Se puede cambiar o agregar un avatar al clickear sobre el actual y se puede editar el usuario al clickera sobre el icono del lapiz que aparece al lado del nombre.
+
+            
+        </p>
 
     </section>
 
