--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS4.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/verJuegosPS4.html
@@ -18,10 +18,13 @@
 
     {% block agregar %}
 
-    <button class="btn btn-primary"> <a href="{%url 'juegosPS4Formulario'%}"> Agregar nuevo juego de PS4</a></button>
+    {% if user.is_authenticated %}
+
+    <button class="btn btn-primary"> <a href="{%url 'juegosPS5Formulario'%}"> Agregar nuevo juego de PS5</a></button>
+
+    {% endif %}
 
     {%endblock%}
-
 
     {%block contenidoQueCambia %}
 
