--- a/ProyectoWeb/AppJuegos/templates/AppJuegos/estudiosList.html
+++ b/ProyectoWeb/AppJuegos/templates/AppJuegos/estudiosList.html
@@ -20,7 +20,7 @@
 
     {% if user.is_authenticated %}
 
-    <button class="btn btn-primary"> <a href="{%url 'crearEstudios'%}"> Agregar nuevo juego de PS5</a></button>
+    <button class="btn btn-primary"> <a href="{%url 'crearEstudios'%}"> Agregar nuevo estudio</a></button>
 
     {% endif %}
 
